<resources>
    <string name="about">About...</string>
    <string name="app_description">Choose from one of three difficulty levels.\nDon\'t let the Android beat you.</string>
    <string name="app_name">Android Tic-Tac-Toe</string>
    <string name="author">By Juan David Porras</string>
    <string name="available_games">Available games</string>
    <string name="create">Create</string>
    <string name="choose_new_multigame_name">Choose a name for the new multiplayer game.</string>
    <string name="count_android_wins">Android: </string>
    <string name="count_human_wins">Human: </string>
    <string name="count_ties">Ties: </string>
    <string name="difficulty">Difficulty</string>
    <string name="difficulty_choose">Choose a difficulty level: </string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_expert">Expert</string>
    <string name="difficulty_harder">Harder</string>
    <string name="difficulty_level">Difficulty level</string>
    <string name="enter_username">Enter your username:</string>
    <string name="first_human">You go first.</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="new_game">New Game</string>
    <string name="next">Next ></string>
    <string name="no">No</string>
    <string name="quit">Quit</string>
    <string name="quit_question">Are you sure you want to quit?</string>
    <string name="refresh">Refresh</string>
    <string name="result_computer_wins">You lose!</string>
    <string name="result_human_wins">You won!</string>
    <string name="result_tie">It\'s a tie.</string>
    <string name="return_to_main_menu">Return to main menu</string>
    <string name="see_available_games">See available games</string>
    <string name="single_player">Single Player</string>
    <string name="sound">Sound</string>
    <string name="sound_description">Turns the sound on/off</string>
    <string name="tictactoe">Tic-Tac-Toe</string>
    <string name="turn_computer">Opponent\'s turn.</string>
    <string name="turn_human">Your turn.</string>
    <string name="victory_message">You won!</string>
    <string name="yes">Yes</string>
    <string name="title_activity_room">RoomActivity</string>
    <string name="waiting_second_player">Please wait while an adversary joins the game...</string>
</resources>
