<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MultiplayerActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiplayer"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/newMultiGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/findAvailableGames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/see_available_games"
        android:onClick="onClick"/>

</LinearLayout>