<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewMultiGameActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:textSize="30sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblMultiName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_new_multigame_name"/>

        <EditText
            android:id="@+id/txtMultiname"
            android:layout_width="match_parent"
            android:layout_below="@id/lblMultiName"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/lblNewUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtMultiname"
            android:text="@string/enter_username"/>

        <EditText
            android:id="@+id/txtNewUsername"
            android:layout_width="match_parent"
            android:layout_below="@id/lblNewUsername"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <Button
        android:id="@+id/createMulti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:onClick="onClick"/>

    <TextView
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="30sp"/>

</LinearLayout>