<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AndroidTicTacToeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lblHuman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_human_wins"
                />
            <TextView
                android:id="@+id/txtHumanWins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/lblTies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_ties"
                />
            <TextView
                android:id="@+id/txtTies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/lblAndroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_android_wins"
                />
            <TextView
                android:id="@+id/txtAndroidWins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>

        <TableLayout
            android:id="@+id/play_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TableRow android:gravity="center_horizontal">
                <Button android:id="@+id/one"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:text="1"
                    android:textSize="70dp"/>
                <Button android:id="@+id/two"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:text="2"
                    android:textSize="70dp"/>
                <Button android:id="@+id/three"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:text="3"
                    android:textSize="70dp"/>
            </TableRow>
            <TableRow android:gravity="center_horizontal">
                <Button android:id="@+id/four"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:text="4"
                    android:textSize="70dp"/>
                <Button android:id="@+id/five"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:text="5"
                    android:textSize="70dp"/>
                <Button android:id="@+id/six"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:text="6"
                    android:textSize="70dp"/>
            </TableRow>
            <TableRow android:gravity="center_horizontal">
                <Button android:id="@+id/seven"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:text="7"
                    android:textSize="70dp"/>
                <Button android:id="@+id/eight"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:text="8"
                    android:textSize="70dp"/>
                <Button android:id="@+id/nine"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:text="9"
                    android:textSize="70dp"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/txtInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="info"
            android:textSize="20dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>